--- a/ask/qa/templates/answer_add.html
+++ b/ask/qa/templates/answer_add.html
@@ -7,7 +7,7 @@
 
     <body>
 	<header>
-	    <h1>{{ question.title }}</h1>
+	    <h1>Answer_ADD {{ question.title }}</h1>
 	</header>
 	<p>{{ question.text }}</p>
 
