--- a/ask/qa/templates/question_add.html
+++ b/ask/qa/templates/question_add.html
@@ -7,6 +7,7 @@
 
     <body>
     <form class="form-horizontal" method="post" action="/ask/">
+    {% csrf_token %}
     <fieldset>
     {% for field in form %}
 	<div class="control-group
