--- a/ask/qa/templates/question_detail.html
+++ b/ask/qa/templates/question_detail.html
@@ -15,5 +15,22 @@
 		{{ a.text }}
 	</li></ul>
     {% endfor %}
+
+    <form class="form-horizontal" method="post" action="/answer/">
+    {% csrf_token %}
+    <fieldset>
+    {% for field in form %}
+	<div class="control-group
+	{% if field.errors %}has-error{% endif %}">
+	    <label class="control-label">{{ field.label }}</label>
+	<div class="controls">{{ field }}</div>
+	</div>
+    {% endfor %}
+    </fieldset>
+    <div class="form-actions">
+    <button type="submit" class="btn btn-primary">
+	    Сохранить</button>
+    </div>
+    </form>
     </body>
 </html>
